Lodestar: Fix My Account buttons spacing issue. See #28.

--- a/lodestar/woocommerce-rtl.css
+++ b/lodestar/woocommerce-rtl.css
@@ -478,6 +478,12 @@ ul.products li.product {
       color: royalblue;
       box-shadow: none; }
 
+.woocommerce-account .woocommerce-MyAccount-content table .button {
+  word-wrap: normal;
+  word-break: normal;
+  display: inline-block;
+  margin: .25em; }
+
 .woocommerce-account .addresses .woocommerce-Address-title h3 {
   float: right; }
 
