--- a/lodestar/woocommerce.css
+++ b/lodestar/woocommerce.css
@@ -777,6 +777,13 @@ ul.products li.product .added_to_cart {
 	text-shadow: none;
 }
 
+.woocommerce-account .woocommerce-MyAccount-content table .button {
+	word-wrap: normal;
+	word-break: normal;
+	display: inline-block;
+	margin: .25em;
+}
+
 .woocommerce-account .addresses .woocommerce-Address-title h3 {
 	float: left;
 }
